<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_album"
            android:icon="@drawable/ic_album"
            android:checked="true"
            android:title="@string/menu_albums"/>
        <item
            android:id="@+id/nav_all_photo"
            android:icon="@drawable/ic_photo"
            android:title="@string/menu_view_all"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings"/>
        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/ic_delete"
            android:title="@string/menu_trash"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_about"/>
        <item
            android:id="@+id/nav_policy"
            android:icon="@drawable/ic_security"
            android:title="Privacy Policy"/>
    </group>
</menu>