<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/heading"
        android:text="@string/menu_delete"
        android:layout_gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="25dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textColor="@color/whiteColor"
        android:background="?attr/colorPrimary"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/del_dialog_msg"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cancelButton"
            android:text="@string/del_dialog_cancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/okButton"
            android:text="@string/del_dialog_ok"
            android:textColor="?attr/colorAccent"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>