<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/heading"
        android:text="@string/rename_dialog_title"
        android:layout_gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="25dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textColor="@color/whiteColor"
        android:background="?attr/colorPrimary"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/renameTextEdit"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/new_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/renameCancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/renameOkBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorAccent"
                style="?android:attr/borderlessButtonStyle"
                android:text="@string/ok" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
