<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/heading"
        android:padding="8dp"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/password_heading"
        android:textColor="@color/whiteColor"
        android:layout_gravity="center"
        android:background="?attr/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/chooseLayout"
            android:layout_marginBottom="8dp"
            android:layout_width="160dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/choosePassword"
                android:hint="@string/choose_password"
                android:maxLength="6"
                android:maxLines="1"
                android:textAlignment="center"
                android:inputType="numberPassword"
                android:layout_width="match_parent"
                android:letterSpacing="0.2"
                android:layout_height="wrap_content"
                tools:ignore="Autofill"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repeatLayout"
            android:layout_marginBottom="12dp"
            android:layout_width="160dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/repeatPassword"
                android:hint="@string/repeat_password"
                android:maxLength="6"
                android:maxLines="1"
                android:textAlignment="center"
                android:inputType="numberPassword"
                android:layout_width="match_parent"
                android:letterSpacing="0.2"
                android:layout_height="wrap_content"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/showPassword"
            android:text="@string/show_password"
            android:buttonTint="?attr/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <include layout="@layout/spacer_widget"/>
        <CheckBox
            android:id="@+id/useBiometric"
            android:text="use fingerprint"
            android:buttonTint="?attr/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:id="@+id/enableButton"
        android:text="@string/enable"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="?attr/colorAccent"
        android:layout_width="wrap_content"
        android:layout_gravity="end"
        android:layout_height="wrap_content"/>

</LinearLayout>